--- a/BicycleSharingSystemavaloniaTemplate/templates/BicycleSharingSystemAvaloniaTemplate/MainWindow.axaml
+++ b/BicycleSharingSystemavaloniaTemplate/templates/BicycleSharingSystemAvaloniaTemplate/MainWindow.axaml
@@ -1,16 +1,16 @@
 <Window
-    Icon="/Assets/avalonia-logo.ico"
-    Title="BicycleSharingSystemavaloniaTemplate"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d"
-    x:Class="BicycleSharingSystemavaloniaTemplate.MainWindow"
-    x:DataType="vm:MainWindowViewModel"
+    x:Class="BicycleSharingSystemTemplate.avalonia.MainWindow"
     xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="using:BicycleSharingSystemavaloniaTemplate.ViewModels"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:vm="using:BicycleSharingSystemTemplate.avalonia.ViewModels"
+    Title="BicycleSharingSystemTemplate.avalonia"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:DataType="vm:MainWindowViewModel"
+    Icon="/Assets/avalonia-logo.ico"
+    mc:Ignorable="d">
 
     <Design.DataContext>
         <!--
@@ -22,7 +22,7 @@
 
     <TextBlock
         HorizontalAlignment="Center"
-        Text="{Binding Greeting}"
-        VerticalAlignment="Center" />
+        VerticalAlignment="Center"
+        Text="{Binding Greeting}" />
 
 </Window>
